# BCE2025

./: CMakeLists.txt  CMakeSourceLists.txt  README.md
AutosarModel/: AutosarDescriptions.lst
apps/light/lce/swc_lce_com_manager/: CMakeSourceLists.txt
apps/light/lce/swc_lce_com_manager/arxml/components/: SwcLceComManager.arxml  SwcLceComManager_old.arxml
apps/light/lce/swc_lce_com_manager/arxml/interfaces/: IComBrightnessRainSensor.arxml  IComCTR_EL_F.arxml  IComCar_State.arxml  IComLight_Ctrl_Inputs.arxml  IComMotor_Speed.arxml
apps/light/lce/swc_lce_com_manager/include/: SwcLceComManager.h
apps/light/lce/swc_lce_com_manager/src/: Rte_SwcLceComManager.cpp  SwcLceComManager.cpp
apps/light/lce/swc_lce_master/: CMakeSourceLists.txt
apps/light/lce/swc_lce_master/include/: SwcLceMaster.h
apps/light/lce/swc_lce_master/src/: Rte_SwcLceMaster.cpp  SwcLceMaster.cpp
bceutil/Ar4Spec/: AUTOSAR_PlatformTypes.arxml  BCE_VbfStdTypes.arxml
bceutil/Autosar/: BCECommonTypes.arxml
bceutil/Config/: GMockGenerator.config
bceutil/Scripts/: generateTestRte.bat
bceutil/Scripts/ArUnit/: artifacts.xml  arunit.bat  arunit.sh  conanbuildinfo.txt  conaninfo.txt  conanmanifest.txt  install.bat  install.sh
bceutil/Scripts/ArUnit/configuration/: config.ini
bceutil/Scripts/ArUnit/configuration/org.eclipse.core.runtime/: .contributions.3  .contributors.3  .extraData.3  .mainData.3  .namespaces.3  .orphans.3  .table.3
bceutil/Scripts/ArUnit/configuration/org.eclipse.core.runtime/.manager/: .fileTable.10  .fileTable.9
bceutil/Scripts/ArUnit/configuration/org.eclipse.equinox.simpleconfigurator/: bundles.info
bceutil/Scripts/ArUnit/configuration/org.eclipse.osgi/: framework.info.3  framework.info.4
bceutil/Scripts/ArUnit/configuration/org.eclipse.osgi/.manager/: .fileTable.3  .fileTable.4  .fileTable.5
bceutil/Scripts/ArUnit/configuration/org.eclipse.osgi/67/data/: SCR
bceutil/Scripts/ArUnit/configuration/org.eclipse.update/: platform.xml
bceutil/Scripts/ArUnit/features/org.artop.arunit.headless.launcher_0.11.9.202102121433/: feature.properties  feature.xml
bceutil/Scripts/ArUnit/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
bceutil/Scripts/ArUnit/p2/org.eclipse.equinox.p2.core/cache/binary/: org.artop.arunit.headless.launcher_root_0.11.9.202102121433
lib/gtest/: CMakeLists.txt
test_rte/generated_old2/: Rte_SwcLceComManager.cpp  Rte_SwcLceComManager_CanoeTraceDump.cpp  Rte_SwcLceComManager_Interface.h  Rte_SwcLceComManager_Type.h  SwcLceComManager_FixtureBase.cpp  SwcLceComManager_FixtureBase.h
test_rte/generatedold/: Rte_SwcLceComManager_BufferDecorator.cpp  Rte_SwcLceComManager_BufferDecorator.h  Rte_SwcLceComManager_CanoeTraceDump.h  Rte_SwcLceComManager_Mock.cpp  Rte_SwcLceComManager_TraceDecorator.h  Rte_Type.h
